fix: Fix some bugs and Header, now not break and render Box Menu in Mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,16 +19,15 @@ body {
 
 h2.animateTitle {
   color: #1E1E1E;
-  background: linear-gradient(to left, #1E1E1E 0, #4ade80 10%, #1E1E1E 20%);
-  padding: 0 1.5rem;
+  background: linear-gradient(to left, #1E1E1E 0, #4ade80 0%, #1E1E1E 20%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
 .dark .animateTitle {
   color: #fbfbfb;
-  background: linear-gradient(to left, #fbfbfb 0, #4ade80 10%, #fbfbfb 20%);
-  padding: 0 1.5rem;
+  background: linear-gradient(to left, #fbfbfb 0, #4ade80 0%, #fbfbfb 20%);
+  /* padding: 0 1.5rem; */
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 
