--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,11 @@ body {
   background: #1E1E1E;
 }
 
+.socialMedia {
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+}
+
 h2.animateTitle {
   color: #1E1E1E;
   background: linear-gradient(to left, #1E1E1E 0, #4ade80 0%, #1E1E1E 20%);
